--- a/base.html
+++ b/base.html
@@ -19,6 +19,12 @@
     .title2 {
         color: red;
     }
+    .cities{
+        background-color:black;
+        color:white;
+        margin:20px;
+        padding:20px;
+    }
 </style>
 
 <body>
@@ -29,7 +35,7 @@
     <h3 class="title2">h3</h3>
     <h4 class="title2">h4</h4>
     <h5 style="font-size:100%;">h5</h5>
-    <h6>h6</h6>
+    <h6 class="cities">h6</h6>
     <p>p标签</p>
     <a href="http://www.w3school.com.cn" title="百度" name="tips">标签a</a>
     <img src="http://pic.guoxuedashi.com/shufa/k/117109.gif" width="200" height="200" alt="Big Boat" />
